<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    <TextView
            style="@style/Settings.Text"
            android:text="@string/app_description"/>

    <TextView
            style="@style/Settings.Header"
            android:text="@string/remove_query"/>

    <TextView
            style="@style/Settings.Text"
            android:text="@string/remove_query_for_domains"/>

    <ListView android:id="@+id/remove_query_list"
            style="@style/Settings.Text"/>

    <Button android:id="@+id/remove_query_add"
            style="@style/Settings.Button"
            android:text="@string/add_domain"/>

</LinearLayout>