<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ru.gelin.android.preference.BigSummaryPreference
            android:title="@string/how_to_use"
            android:summary="@string/app_description"
            android:selectable="false"
            android:persistent="false" />

    <PreferenceCategory
            android:title="@string/domains">

        <Preference
                android:title="@string/remove_query"
                android:summary="@string/remove_query_for_domains">
            <intent android:action="ru.gelin.lengthener.android.ACTION_SET_REMOVE_QUERY_DOMAINS"/>
        </Preference>

        <!--<Preference-->
                <!--android:title="@string/click_link"-->
                <!--android:summary="@string/click_link_for_domains">-->
            <!--<intent android:action="ru.gelin.lengthener.android.ACTION_SET_CLICK_LINK_DOMAINS"/>-->
        <!--</Preference>-->

    </PreferenceCategory>

</PreferenceScreen>